(images) Prevent "image is solving" banner from overlapping part of the image on mobile

--- a/src/app/shared/components/misc/image-viewer/image-viewer.component.scss
+++ b/src/app/shared/components/misc/image-viewer/image-viewer.component.scss
@@ -391,7 +391,14 @@
             }
 
             .image-viewer-banner {
-              margin: -2rem -2rem 1rem -2rem;
+              @media (min-width: $lg-min) {
+                margin: -2rem -2rem 1rem -2rem;
+              }
+
+              @media (max-width: $md-max) {
+                margin: -1rem -2rem 1rem -2rem;
+              }
+
               padding: .5rem 2rem;
               border-radius: 0;
               box-shadow: none;
